# SAAT

./: .gitignore  404.html  Demo.ipynb  Large_Demo.ipynb  Readme.md  Topic_1_Allocation.csv  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
acknowledgements/: index.html
data/: example_data.csv
docs/: acknowledgements.md  index.md  installation.md  paper.md
docs/tutorial/: annealing.md  data.md  results.md  setup.md  weights.md
installation/: index.html
lib/: SAAT.py  utils.py
paper/: index.html
results/: Topic_1_Allocation.csv
search/: search_index.json
site/: 404.html  index.html
tests/: test_utils.py
tutorial/annealing/: index.html
tutorial/data/: index.html
tutorial/results/: index.html
tutorial/setup/: index.html
tutorial/weights/: index.html
